# dv-rs

./: Cargo.toml  README.md
src/: constraints.rs  lib.rs  main.rs  validation.rs
test_data/: brain_stroke_bad.csv  saved_constraints.json  validation.csv
