[package]
name = "dvrs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
polars = {version="0.26.1", features=["describe", "lazy", "csv-file", "strings", "is_in"]}
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"
cli-table = {version="0.4"}
clap = {version="4.1.4", features=["derive", "cargo"]}

[env]
POLARS_FMT_MAX_COLS="-1"
POLARS_FMT_MAX_ROWS="-1"
